--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@truffle/hdwallet-provider": "^2.1.12",
     "axios": "^1.4.0",
     "ethers": "^6.6.2",
+    "ipfs-http-client": "^60.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
